--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.2.0",
     "react-quill": "1.3.5",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.17",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
