--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-quill": "1.3.5",
     "react-scripts": "4.0.3",
     "react-tooltip": "^4.2.17",
+    "recoil": "^0.2.0",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
