--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^17.0.3",
     "classnames": "^2.3.1",
     "firebase": "^8.3.2",
+    "quill": "^2.0.0-dev.3",
+    "quill-better-table": "^1.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
